--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://Alaa_AlDahdouh@bitbucket.org/Alaa_AlDahdouh/devconnector.git"
+    "url": "git+https://github.com/AlDahdouh/SocialMedia.git"
   },
   "author": "Alaa AlDahdouh",
   "license": "ISC",
