--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,7 @@
   },
   "author": "Alaa AlDahdouh",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/Alaa_AlDahdouh/devconnector#readme",
+  "homepage": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
